--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 <header class="top">
     <img src="imagenes/Mercedes-Benz-Logo-PNG-Pic.png" alt="Mercedes Logo" class="logo">
-    <div class="menu-btn" id="menu-btn">☰</div>
+    <button class="menu-btn" id="menu-btn">☰</button>
 
     <nav> 
         <ul class="navigation">
-            <li>Electric</li>
-            <li>Maybach</li>
-            <li>Accessories</li>
-            <li>Stores</li>
+            <li><a href="#"></a>Electric</li>
+            <li><a href="#"></a>Maybach</li>
+            <li><a href="#"></a>Accessories</li>
+            <li><a href="#"></a>Stores</li>
         </ul>
     </nav>
 
@@ -41,16 +41,16 @@
 
     <section class="banner">
         <img src="imagenes/wp4295748.jpg" alt="Mercedes car on the road" class="banner-img">
-        <div class="titulo">New Mercedes CLS</div>
-        <div class="texto">The power in your hands</div>
+        <h2 class="titulo">New Mercedes CLS</h2>
+        <p class="texto">The power in your hands</p>
     </section>
 
 
-    <section class="grid">
+    <div class="grid">
 
         <article class="card">
             <p class="type electric">Electric</p>
-            <p class="model">Mercedes E450 Cabriolet</p>
+            <h2 class="model">Mercedes E450 Cabriolet</h2>
             <img src="imagenes/iris.avif" class="car-img" alt="Mercedes E450 cabriolet hybrid car">
             <a href="https://www.mercedes-benz.es/passengercars/models/saloon/e-class/overview.html" target="_blank" class="info-btn">More info</a>
             <div class="colors">
@@ -64,7 +64,7 @@
 
         <article class="card">
             <p class="type hybrid">Hybrid</p>
-            <p class="model">Mercedes G 580</p>
+            <h2 class="model">Mercedes G 580</h2>
             <img src="imagenes/iris(3).avif" class="car-img" alt="Mercedes G 580 electric car">
             <a href="https://www.mercedes-benz.es/passengercars/models/suv/g-class-electric/overview.html" target="_blank" class="info-btn">More info</a>
             <div class="colors">
@@ -76,7 +76,7 @@
 
         <article class="card">
             <p class="type hybrid">Hybrid</p>
-            <p class="model">Mercedes CLE Cabrio</p>
+            <h2 class="model">Mercedes CLE Cabrio</h2>
             <img src="imagenes/iris(4).avif" class="car-img" alt="Mercedes CLE Cabrio">
             <a href="https://www.mercedes-benz.es/passengercars/models/saloon/e-class/overview.html" target="_blank" class="info-btn">More info</a>
             <div class="colors">
@@ -89,7 +89,7 @@
 
         <article class="card">
             <p class="type electric">Electric</p>
-            <p class="model">Mercedes C State</p>
+            <h2 class="model">Mercedes C State</h2>
             <img src="imagenes/d04252c57a546aa97902336277c2dacae05e6.avif" class="car-img" alt="Mercedes C State electric car">
             <a href="https://www.mercedes-benz.es/passengercars/models/estate/c-class/amg.html" target="_blank" class="info-btn">More info</a>
             <div class="colors">
@@ -99,11 +99,11 @@
             </div>
         </article>
 
-    </section>
+    </div>
 
     <section class="mensaje">
         <div class="mensaje-text">
-            <h1>Find your nearest<br>Mercedes dealer</h1>
+            <h2>Find your nearest<br>Mercedes dealer</h2>
             <p>Browse over 100 dealers worldwide, and<br>find the one that best suits your situation</p>
         </div>
     </section>
@@ -117,7 +117,7 @@
 
     <section class="grid2">
         <div class="gallery">
-            <h3>Confort</h3>
+            <h3>Comfort</h3>
             <img src="imagenes/confort.jpg" class="confort-image" alt="Mercedes interior with luxury seats and comfort technology">
             <button class="btn">More info</button>
         </div>
@@ -137,20 +137,20 @@
 
 
     <section class="m2">
-        <h4>Black as tentation</h4>
+        <h2>Black as tentation</h2>
     </section>
 
     <section class="m3">
-        <span class="titlewheel">The Mercedes Maybach wheel programme </span>
-        <span class="subtitlewheel">Learn More</span>
+        <h2 class="titlewheel">The Mercedes Maybach wheel programme </h2>
+        <p class="subtitlewheel">Learn More</p>
         <img src="imagenes/wheelprogramme.jpg" class="imagewheel" alt="Mercedes Maybach wheels">
 
     </section>
 
-    <section class="m4">
-        <span class="readytext">Ready to own the car of your dreams?. Mercedes-Maybach wheel programme.<br> Maybach forged wheels in multi-spoke design.</span>
-        <button type="contact">Contact</button>
-    </section>
+    <div class="m4">
+        <p class="readytext">Ready to own the car of your dreams?. Mercedes-Maybach wheel programme.<br> Maybach forged wheels in multi-spoke design.</p>
+        <button type="button">Contact</button>
+    </div>
 
 </main>
 
@@ -161,7 +161,7 @@
      <form class="newsletter">
 
         <p class="footer-title">
-            <span class="join-title">Join the power.</span><br>
+            <span class="join-title">Join the power.</span>
             <span class="subtitle">Sign up for our newsletter.</span>
         </p>
 
@@ -190,7 +190,7 @@
     <div class="footer-headers">
 
         <div class="footer-column">
-            <h1>Explorer</h1>
+            <h2>Explorer</h2>
             <a href="#">Electric Bikes</a>
             <a href="#">City Bikes</a>
             <a href="#">Mountain Bikes</a>
@@ -201,7 +201,7 @@
         </div>
 
         <div class="footer-column">
-            <h1>About</h1>
+            <h2>About</h2>
             <a href="#">About Us</a>
             <a href="#">Journal</a>
             <a href="#">Reviews</a>
@@ -209,7 +209,7 @@
         </div>
 
         <div class="footer-column">
-            <h1>Help</h1>
+            <h2>Help</h2>
             <a href="#">Contact</a>
             <a href="#">FAQ</a>
             <a href="#">Delivery</a>
